--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card-deck mb-3 mt-3">
+      <div class="card-columns mb-3 mt-3">
 
         <div class="card mb-4 mb-4 shadow-sm">
           <div class="card-header">
